updates per feedback, typescript schedules information

--- a/docs/concepts/application-node.mdx
+++ b/docs/concepts/application-node.mdx
@@ -1,16 +1,16 @@
 ---
 id: application-node
-title: What is a Resonate HQ Application Node?
+title: What is a Resonate Application Node?
 sidebar_label: Application Node
 sidebar_position: 3
-description: Resonate HQ Application Node definition
+description: Resonate Application Node definition
 last_update:
   date: "08-27-2024"
 tags:
   - concepts
 ---
 
-A Resonate HQ Application Node can be described as a deployed bundle of code that has a top-level function registered with and run by `resonate.run()`.
+A Resonate Application Node can be described as a deployed bundle of code that has a top-level function registered with and run by `resonate.run()`.
 
 ![Application Node Call Graph Local Process](/img/application-node-call-graph-local-process.svg)
 
