--- a/docs/concepts/index.mdx
+++ b/docs/concepts/index.mdx
@@ -1,8 +1,8 @@
 ---
 id: index
-title: Resonate HQ concepts
+title: Resonate concepts
 sidebar_label: Concepts
-description: Learn about the core concepts of Resonate HQ.
+description: Learn about the core concepts of Resonate.
 last_update:
   date: "08-23-2024"
 tags:
