--- a/docs/develop/index.mdx
+++ b/docs/develop/index.mdx
@@ -1,7 +1,7 @@
 ---
 id: index
-title: Develop with Resonate HQ
-description: Develop your application with a Resonate HQ SDK.
+title: Develop with Resonate
+description: Develop your application with a Resonate SDK.
 sidebar_label: Develop
 last_update:
   date: "08-23-2024"
