--- a/docs/evaluate/why-resonate.mdx
+++ b/docs/evaluate/why-resonate.mdx
@@ -1,7 +1,7 @@
 ---
-id: why-resonate-hq
-title: Why Resonate HQ?
-sidebar_label: Why Resonate HQ
+id: why-resonate
+title: Why Resonate?
+sidebar_label: Why Resonate
 description: Evaluate Resonate for your distributed system.
 last_update:
   date: "08-22-2024"
@@ -11,7 +11,7 @@ tags:
 
 Curious to know what Resonate can do for your cloud application?
 
-### Resonate HQ provides Distributed Async Await
+### Resonate provides Distributed Async Await
 
 Distributed Async Await extends your traditional Async Await.
 Traditional Aysnc Await enables concurrent execution on a single physical location using just functions and promises.
@@ -26,7 +26,7 @@ It is based on an intuitive paradigm that you already know, and we strive to mak
 
 ### You don't need the Server to get started
 
-You don't need the Resonate HQ Server to get started.
+You don't need the Resonate Server to get started.
 The Server is provides supervision and orchestration of your promises and functions.
 However, many of the SDK features, such as automatic failure detection and migitation, are provided out-of-the-box, and don't require heavy communication with the Server to work.
 
