--- a/docs/get-started/index.mdx
+++ b/docs/get-started/index.mdx
@@ -1,6 +1,6 @@
 ---
 id: index
-title: Get started with Resonate HQ
+title: Get started with Resonate
 sidebar_label: Getting started w/ Resonate
 last_update:
   date: "08-14-2024"
@@ -15,7 +15,7 @@ The answer can be a little bit use case specific, however generically you would 
 
 ### Step 1. Choose your SDK
 
-Resonate HQ currently has a [TypeScript SDK](/develop/typescript) and a [Python SDK](/develop/python).
+Resonate currently has a [TypeScript SDK](/develop/typescript) and a [Python SDK](/develop/python).
 
 However, the SDKs are currently at different stages of development and do not yet offer the same set of capabilities and features.
 
@@ -31,7 +31,7 @@ For Python this could be `pip`, `pipenv`, or `poetry` for example. See the [Pyth
 
 ### Step 3. Start building your application
 
-Generically speaking, to use a Resonate HQ SDK in your application you will do the following:
+Generically speaking, to use a Resonate SDK in your application you will do the following:
 
 1. Import the SDK package into your project.
 2. Register the functions that you want to have Durable Promises.
@@ -44,11 +44,11 @@ See the following SDK guides for details:
 
 Just by using the SDK, your application will have access to automatic and configurable failure detection and mitigation through timeouts and retries as well as a few other features.
 
-### Step 4. Connect to a Resonate HQ Server
+### Step 4. Connect to a Resonate Server
 
 To make your promises and functions durable even in the face of complete hardware crashes, then start a Resonate Server and provide the connection URL to the handle provided by the SDK.
 
-See the [Install and run the Resonate HQ Server](/get-started/server-installation) guide for details.
+See the [Install and run the Resonate Server](/get-started/server-installation) guide for details.
 
 import DocCardList from "@theme/DocCardList";
 import { useCurrentSidebarCategory } from "@docusaurus/theme-common";
