--- a/docs/get-started/server-installation.mdx
+++ b/docs/get-started/server-installation.mdx
@@ -1,8 +1,8 @@
 ---
 id: server-installation
-title: Resonate HQ Server installation
+title: Resonate Server installation
 sidebar_label: Server installation
-description: Learn how to install and run the Resonate HQ Server on your machine.
+description: Learn how to install and run the Resonate Server on your machine.
 last_update:
   date: "08-21-2024"
 pagination_next: null
@@ -11,7 +11,7 @@ tags:
   - get-started
 ---
 
-Install and run the Resonate HQ Server to provide durability to your application through hard crashes and failures.
+Install and run the Resonate Server to provide durability to your application through hard crashes and failures.
 
 ## MacOS and Linux
 
@@ -26,7 +26,7 @@ brew install resonatehq/tap/resonate
 resonate serve
 ```
 
-The above command installs and starts the Resonate server using a default configuration.
+The above command installs and starts the Resonate Server using a default configuration.
 
 Alternatively, you can build and run it from source.
 Make sure you have the Go programming language installed.
