--- a/docs/get-started/typescript-quickstart/index.mdx
+++ b/docs/get-started/typescript-quickstart/index.mdx
@@ -1,21 +1,21 @@
 ---
 id: index
-title: Resonate HQ TypeScript SDK quickstart tutorial
-description: Get started with the Resonate HQ TypeScript SDK by following this quickstart tutorial.
+title: Resonate TypeScript SDK quickstart tutorial
+description: Get started with the Resonate TypeScript SDK by following this quickstart tutorial.
 sidebar_label: TypeScript SDK quickstart
 last_update:
   date: "08-27-2024"
 keywords:
-  - Resonate HQ TypeScript SDK
+  - Resonate TypeScript SDK
   - Distributed Async Await tutorial
   - Function retries Resonate
   - Retry rate limits TypeScript
-  - Resonate HQ Server connection
+  - Resonate Server connection
   - Platform-level failure recovery
   - Resonate Application Node
   - Promise inspection Resonate Server
   - TypeScript quickstart tutorial
-  - Resonate HQ SDK quickstart
+  - Resonate SDK quickstart
 tags:
   - typescript
   - sdk-guidance
@@ -23,16 +23,16 @@ tags:
   - getting-started
 ---
 
-This quickstart tutorial introduces you to the Resonate HQ TypeScript SDK.
+This quickstart tutorial introduces you to the Resonate TypeScript SDK.
 
 ## Part 1
 
-In [Part 1](/get-started/typescript-quickstart/part-1), you develop your first _Distributed Async Await_ application with the Resonate HQ SDK, a summarization service.
-This part illustrates features such as transparent function retries and retry rate limits, simply through the integration of the Resonate HQ SDK, without the need for any additional infrastructure.
+In [Part 1](/get-started/typescript-quickstart/part-1), you develop your first _Distributed Async Await_ application with the Resonate SDK, a summarization service.
+This part illustrates features such as transparent function retries and retry rate limits, simply through the integration of the Resonate SDK, without the need for any additional infrastructure.
 
 ## Part 2
 
-In [Part 2](/get-started/typescript-quickstart/part-2), you connect your application to a Resonate HQ Server to enable recovery from platform-level failures.
+In [Part 2](/get-started/typescript-quickstart/part-2), you connect your application to a Resonate Server to enable recovery from platform-level failures.
 This part showcases how a Resonate Application Node can recover from hard crashes, and you will inspect the status of promises in the Resonate Server.
 
 import DocCardList from "@theme/DocCardList";
