--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -1,8 +1,8 @@
 ---
 id: index
 slug: /
-title: Resonate HQ Documentation
-description: Get started with Resonate HQ by asking Echo or digging into our docs.
+title: Resonate Documentation
+description: Get started with Resonate by asking Echo or digging into our docs.
 sidebar_label: Home
 sidebar_position: 1
 last_update:
