--- a/docs/operate/server-api.mdx
+++ b/docs/operate/server-api.mdx
@@ -1,6 +1,6 @@
 ---
 id: server-api
-title: Resonate HQ Server API
+title: Resonate Server API
 sidebar_label: Server API
 last_update:
   date: "08-23-2024"
@@ -14,7 +14,7 @@ This is an overview of the Resonate API surface area.
 
 [OpenAPI Specification](https://github.com/resonatehq/resonate/blob/main/api/promises-openapi.yml)
 
-The Promise API is the core of the Resonate server. It allows us to store computational progress in a database. By doing this, we can offer `recoverability` to processes using our SDK even after a process crash due to hardware or software failures. Currently, we support two databases:
+The Promise API is the core of the Resonate Server. It allows us to store computational progress in a database. By doing this, we can offer `recoverability` to processes using our SDK even after a process crash due to hardware or software failures. Currently, we support two databases:
 
 1. SQLite (default)
 2. PostgreSQL
