--- a/docs/operate/server-errors.mdx
+++ b/docs/operate/server-errors.mdx
@@ -1,8 +1,8 @@
 ---
 id: server-errors
-title: Resonate HQ Server errors
+title: Resonate Server errors
 sidebar_label: Server errors
-description: "Troubleshoot Resonate HQ Server errors"
+description: "Troubleshoot Resonate Server errors"
 tags:
   - server-guidance
   - errors
