--- a/docs/concepts/failure-detection-and-recovery.mdx
+++ b/docs/concepts/failure-detection-and-recovery.mdx
@@ -3,7 +3,7 @@ id: failure-detection-and-recovery
 title: Failure detection and recovery
 sidebar_label: Failure detection and recovery
 sidebar_position: 4
-description: Learn how Resonate HQ detects and recovers from failures.
+description: Learn how Resonate detects and recovers from failures.
 last_update:
   date: "09-04-2024"
 tags:
@@ -75,10 +75,10 @@ The new function execution effectively resumes from the point of failure instead
 
 Functions await on other functions through [Durable Promises](/concepts/durable-promise).
 
-In Resonate HQ, timeouts are associated with promise resolution.
+In Resonate, timeouts are associated with promise resolution.
 
-Resonate HQ attempts to resolve and retry durable promises until the specified timeout.
-If the timeout is reached, Resonate HQ marks the promise as failed.”
+Resonate attempts to resolve and retry durable promises until the specified timeout.
+If the timeout is reached, Resonate marks the promise as failed.”
 
 ```ts
 const resonate = new Resonate({
