--- a/docs/develop/python.mdx
+++ b/docs/develop/python.mdx
@@ -1,7 +1,7 @@
 ---
 id: python
-title: Resonate HQ Python SDK
-description: Get started with the Resonate HQ Python SDK.
+title: Resonate Python SDK
+description: Get started with the Resonate Python SDK.
 sidebar_label: Python SDK
 last_update:
   date: "08-22-2024"
@@ -10,6 +10,6 @@ tags:
   - sdk-guidance
 ---
 
-The Resonate HQ Python SDK is currently in development.
+The Resonate Python SDK is currently in development.
 
 Visit the [GitHub repository](https://github.com/resonatehq/resonate-sdk-py) for the latest information.
