--- a/docs/evaluate/index.mdx
+++ b/docs/evaluate/index.mdx
@@ -1,7 +1,7 @@
 ---
 id: index
-title: Evaluate Resonate HQ
-description: Get started with Resonate HQ by evaluating its features and capabilities.
+title: Evaluate Resonate
+description: Get started with Resonate by evaluating its features and capabilities.
 sidebar_label: Evaluate
 last_update:
   date: "08-23-2024"
@@ -9,9 +9,9 @@ tags:
   - evaluate
 ---
 
-**Considering Resonate HQ?**
+**Considering Resonate?**
 
-Evaluate Resonate HQ to understand its features and capabilities.
+Evaluate Resonate to understand its features and capabilities.
 
 import DocCardList from "@theme/DocCardList";
 import { useCurrentSidebarCategory } from "@docusaurus/theme-common";
