--- a/docs/operate/server-architecture.mdx
+++ b/docs/operate/server-architecture.mdx
@@ -2,7 +2,7 @@
 id: server-architecture
 title: Server architecture
 sidebar_label: Server architecture
-description: Learn about the Resonate HQ server architecture and its subsystems.
+description: Learn about the Resonate Server architecture and its subsystems.
 last_update:
   date: "08-23-2024"
 tags:
@@ -10,7 +10,7 @@ tags:
   - architecture
 ---
 
-Welcome to the Resonate Architecture guide! This guide is designed to give you a deep dive into the internals of the Resonate server. By the end, you'll have a basic understanding of our three subsystems and the abstractions we have chosen.
+Welcome to the Resonate Architecture guide! This guide is designed to give you a deep dive into the internals of the Resonate Server. By the end, you'll have a basic understanding of our three subsystems and the abstractions we have chosen.
 
 import architecture from "/img/architecture.png";
 
@@ -18,7 +18,7 @@ import architecture from "/img/architecture.png";
   <img src={architecture} alt="architecture" width="600" />
 </center>
 
-The Resonate HQ server consists of three subsystems:
+The Resonate Server consists of three subsystems:
 
 - Kernel
 - API
