--- a/docs/operate/server-kubernetes-deployment.mdx
+++ b/docs/operate/server-kubernetes-deployment.mdx
@@ -1,8 +1,8 @@
 ---
 id: kubernetes-server-deployment
-title: Resonate HQ Server Kubernetes deployment
+title: Resonate Server Kubernetes deployment
 sidebar_label: Kuberenetes deployment
-description: Discover how to deploy a Resonate HQ Server to Kubernetes
+description: Discover how to deploy a Resonate Server to Kubernetes
 last_update:
   date: "08-19-2024"
 tags:
