--- a/docs/operate/server-observability.mdx
+++ b/docs/operate/server-observability.mdx
@@ -1,6 +1,6 @@
 ---
 id: server-observability
-title: Resonate HQ Server observability
+title: Resonate Server observability
 sidebar_label: Server observability
 last_update:
   date: "08-22-2024"
