--- a/docs/develop/typescript.mdx
+++ b/docs/develop/typescript.mdx
@@ -181,7 +181,9 @@ Otherwise, the Schedule will persist in local memory and disappear when the proc
 You can execute your function periodically with a cron expression.
 
 <!--SNIPSTART examples-ts-schedule-flow-function-example-->
+
 [schedules/index.ts](https://github.com/resonatehq/examples-ts/blob/main/schedules/index.ts)
+
 ```ts
 import { Resonate, Context } from "@resonatehq/sdk";
 import { register } from "module";
@@ -219,9 +221,10 @@ const sched = await resonate.schedule("flow-schedule", "* * * * *", flow);
 console.log(sched);
 
 // Start the Resonate application
-resonate.start(5000);
+resonate.start();
 console.log("Running");
 ```
+
 <!--SNIPEND-->
 
 If the above process crashes, you can restart it and the interval of the function executions will pick back up.
@@ -252,6 +255,8 @@ message: 'A schedule with this identifier already exists'
 
 ### Get a Schedule
 
+**How to get Schedule details using the TypeScript SDK.**
+
 You can get the details for a Schedule with the Schedule ID used to create the schedule.
 
 ```typescript
@@ -259,6 +264,8 @@ const sched = await resonate.schedules.get("flow-schedule");
 ```
 
 ### Search for Schedules
+
+**How to search for Schedules.**
 
 You can search for Schedules using a combination of tags and ID wildcards.
 
@@ -281,6 +288,8 @@ resonate schedules delete <schedule-id>
 ```
 
 ## Resolving promises
+
+**How to manually resolve a Durable Promise from another process.**
 
 Promises and executions always come in pairs.
 However an execution could be any "step".
@@ -339,12 +348,12 @@ console.log("Complete");
 ```
 
 In the previous code example, the line `await ctx.run("step2");` blocks the rest of the function execution on promise id "step2".
-This is because we are passing a string "step2" which creates a promise with an Id of "step2" that is not directly attached to a function execution.
+This is because we are passing the string "step2" which creates a promise with an Id of "step2" that is not directly attached to a function execution.
 
 In the other await steps a function is called instead, i.e. `await ctx.run(step1);` and `await ctx.run(step2);`, and promises are created that are directly paired with those function exeuctions.
 In the case of `await ctx.run("step2");` a promise is created that is not directly associated with an execution.
 
-Now we must resolve that function "manually" and we can do this from any process that is connected to the Resonate Server.
+Now we must resolve that promise "manually" and we can do this from any process that is connected to the Resonate Server.
 For example:
 
 ```typescript
@@ -356,6 +365,7 @@ const resonate = new Resonate({ url: "http://localhost:8001" });
 // ...
 // Unblock flow by resolving step 2
 console.log("executing step 2");
+// highlight-next-line
 resonate.promises.resolve("step2", "description of resolution");
 // ...
 ```
