headers and remove next steps

--- a/docs/develop/typescript.mdx
+++ b/docs/develop/typescript.mdx
@@ -539,7 +539,7 @@ The options, such as timeout, cannot exceed the parent function. If it does, the
 ctx.run(download, arg1, arg2, resonate.options({ ... }));
 ```
 
-### Versioning
+## Versioning
 
 You can register multiple versions of a function with `resonate.register()`:
 
@@ -574,10 +574,3 @@ async function charge(ctx: Context, user: User, song: Song): Promise<boolean> {
   return true;
 }
 ```
-
-## Next Steps
-
-We hope this guide has provided you with a solid foundation for working with the Resonate Typescript SDK. If you have any questions or need further assistance, don't hesitate to reach out to us. For next steps, consider the following:
-
-- Refer to our [API reference](https://resonatehq.github.io/resonate-sdk-ts/index.html) for a complete list of available methods and options.
-- Refer to our [TypeScript Quickstart Repo](https://github.com/resonatehq/quickstart-ts/tree/main) for in-depth code examples of the TypeScript SDK.
