adding CLI reference commands and flags

--- a/docs/operate/server-architecture.mdx
+++ b/docs/operate/server-architecture.mdx
@@ -2,6 +2,7 @@
 id: server-architecture
 title: Server architecture
 sidebar_label: Server architecture
+sidebar_position: 2
 description: Learn about the Resonate Server architecture and its subsystems.
 last_update:
   date: "08-23-2024"
