--- a/docs/operate/server-kubernetes-deployment.mdx
+++ b/docs/operate/server-kubernetes-deployment.mdx
@@ -2,6 +2,7 @@
 id: kubernetes-server-deployment
 title: Resonate Server Kubernetes deployment
 sidebar_label: Kuberenetes deployment
+sidebar_position: 4
 description: Discover how to deploy a Resonate Server to Kubernetes
 last_update:
   date: "08-19-2024"
