--- a/docs/operate/server-observability.mdx
+++ b/docs/operate/server-observability.mdx
@@ -2,6 +2,7 @@
 id: server-observability
 title: Resonate Server observability
 sidebar_label: Server observability
+sidebar_position: 5
 last_update:
   date: "08-22-2024"
 tags:
