--- a/docs/operate/server-api.mdx
+++ b/docs/operate/server-api.mdx
@@ -2,6 +2,7 @@
 id: server-api
 title: Resonate Server API
 sidebar_label: Server API
+sidebar_position: 1
 last_update:
   date: "08-23-2024"
 tags:
