--- a/docs/operate/server-errors.mdx
+++ b/docs/operate/server-errors.mdx
@@ -2,6 +2,7 @@
 id: server-errors
 title: Resonate Server errors
 sidebar_label: Server errors
+sidebar_position: 3
 description: "Troubleshoot Resonate Server errors"
 tags:
   - server-guidance
