CLI landing page edits

--- a/docs/operate/cli-reference/index.mdx
+++ b/docs/operate/cli-reference/index.mdx
@@ -2,7 +2,14 @@
 id: index
 title: Resonate CLI reference
 sidebar_label: CLI reference
+description: Reference documentation for the Resonate CLI.
+tags:
+  - cli
+  - reference
 ---
+
+Use the Resonate CLI to interact with your Resonate Server from the command line.
+This reference documentation provides a list of available commands and flags.
 
 import DocCardList from "@theme/DocCardList";
 import { useCurrentSidebarCategory } from "@docusaurus/theme-common";
